[gd_scene load_steps=2 format=2]

[ext_resource path="res://NoteMeasure.gd" type="Script" id=1]

[node name="NoteMeasure" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BeginningMark" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="BeginningMark"]
margin_right = 5.0
margin_bottom = 5.0
color = Color( 0.054902, 1, 0, 1 )

[node name="BeginningVisibilityNotifier" type="VisibilityNotifier2D" parent="BeginningMark"]

[node name="OctavePanel" type="Node2D" parent="."]

[node name="EndingMark" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="EndingMark"]
margin_top = 5.0
margin_right = 5.0
margin_bottom = 10.0
color = Color( 1, 0, 0, 1 )

[node name="EndingVisibilityNotifier" type="VisibilityNotifier2D" parent="EndingMark"]

[node name="FullMark" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="FullMark"]
margin_left = 5.0
margin_top = 10.0
margin_right = 5.0
margin_bottom = 15.0
color = Color( 1, 0, 0.960784, 1 )

[node name="FullVisibilityNotifier" type="VisibilityNotifier2D" parent="FullMark"]

[connection signal="screen_entered" from="BeginningMark/BeginningVisibilityNotifier" to="." method="_on_BeginningVisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="BeginningMark/BeginningVisibilityNotifier" to="." method="_on_BeginningVisibilityNotifier_screen_exited"]
[connection signal="screen_entered" from="EndingMark/EndingVisibilityNotifier" to="." method="_on_EndingVisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="EndingMark/EndingVisibilityNotifier" to="." method="_on_EndingVisibilityNotifier_screen_exited"]
[connection signal="screen_entered" from="FullMark/FullVisibilityNotifier" to="." method="_on_FullVisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="FullMark/FullVisibilityNotifier" to="." method="_on_FullVisibilityNotifier_screen_exited"]
